Api Güncelleme
